chore: remove lovable references

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <meta property="og:title" content="Cosynest - Chalet de Luxe à Vars, Alpes" />
     <meta property="og:description" content="Votre chalet de luxe tout inclus à Vars. Suites spacieuses, spa privé, service premium." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://chaletcosynest.fr/logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@cosynest" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://chaletcosynest.fr/logo.png" />
   </head>
 
   <body>
